fix nav z-index to higer

--- a/wwwroot/css/home/home.css
+++ b/wwwroot/css/home/home.css
@@ -10,6 +10,7 @@ nav {
     margin-bottom: 36px;
     position: sticky;
     top: 0;
+    z-index: 99;
 }
 .left-container {
     i {
